@@ -18,6 +18,7 @@
 
 package org.apache.giraph.examples;
 
+import com.google.common.collect.Lists;
 import org.apache.giraph.conf.ImmutableClassesGiraphConfigurable;
 import org.apache.giraph.conf.ImmutableClassesGiraphConfiguration;
 import org.apache.giraph.edge.Edge;
@@ -25,11 +26,10 @@ import org.apache.giraph.edge.EdgeFactory;
 import org.apache.giraph.graph.Vertex;
 import org.apache.giraph.io.formats.TextVertexInputFormat;
 import org.apache.hadoop.io.DoubleWritable;
+import org.apache.hadoop.io.FloatWritable;
 import org.apache.hadoop.io.LongWritable;
 import org.apache.hadoop.mapreduce.InputSplit;
 import org.apache.hadoop.mapreduce.TaskAttemptContext;
-
-import com.google.common.collect.Lists;
 
 import java.io.IOException;
 import java.util.List;
@@ -37,35 +37,32 @@ import java.util.regex.Pattern;
 
 /**
  * Simple text-based {@link org.apache.giraph.io.VertexInputFormat} for
- * unweighted graphs with long ids. Each line consists of: vertex neighbor1
- * neighbor2 ...
+ * weighted graphs with long ids. Each line consists of: vertex neighbor1:weight
+ * neighbor2:weight ...
  */
-public class LongDoubleDoubleTextInputFormat
-    extends TextVertexInputFormat<LongWritable, DoubleWritable,
-    DoubleWritable>
+public class LongDoubleFloatTextInputFormat
+    extends TextVertexInputFormat<LongWritable, DoubleWritable, FloatWritable>
     implements ImmutableClassesGiraphConfigurable<LongWritable, DoubleWritable,
-    DoubleWritable> {
-
+    FloatWritable> {
   /** Configuration. */
   private ImmutableClassesGiraphConfiguration<LongWritable, DoubleWritable,
-      DoubleWritable> conf;
+      FloatWritable> conf;
 
   @Override
   public TextVertexReader createVertexReader(InputSplit split,
-      TaskAttemptContext context)
-    throws IOException {
-    return new LongDoubleDoubleDoubleVertexReader();
+      TaskAttemptContext context) throws IOException {
+    return new LongDoubleFloatVertexReader();
   }
 
   @Override
   public void setConf(ImmutableClassesGiraphConfiguration<LongWritable,
-      DoubleWritable, DoubleWritable> configuration) {
+      DoubleWritable, FloatWritable> configuration) {
     this.conf = configuration;
   }
 
   @Override
   public ImmutableClassesGiraphConfiguration<LongWritable, DoubleWritable,
-      DoubleWritable> getConf() {
+      FloatWritable> getConf() {
     return conf;
   }
 
@@ -73,27 +70,30 @@ public class LongDoubleDoubleTextInputFormat
    * Vertex reader associated with
    * {@link LongDoubleDoubleTextInputFormat}.
    */
-  public class LongDoubleDoubleDoubleVertexReader extends
-    TextVertexInputFormat<LongWritable, DoubleWritable,
-        DoubleWritable>.TextVertexReader {
+  public class LongDoubleFloatVertexReader extends
+      TextVertexInputFormat<LongWritable, DoubleWritable,
+          FloatWritable>.TextVertexReader {
     /** Separator of the vertex and neighbors */
-    private final Pattern separator = Pattern.compile("[\t ]");
+    private final Pattern neighborSeparator = Pattern.compile("[\t ]");
+    /** Separator of a neighbor and its weight */
+    private final Pattern weightSeparator = Pattern.compile("[:]");
 
     @Override
-    public Vertex<LongWritable, DoubleWritable, DoubleWritable>
+    public Vertex<LongWritable, DoubleWritable, FloatWritable>
     getCurrentVertex() throws IOException, InterruptedException {
-      Vertex<LongWritable, DoubleWritable, DoubleWritable>
-        vertex = conf.createVertex();
+      Vertex<LongWritable, DoubleWritable, FloatWritable>
+          vertex = conf.createVertex();
 
-      String[] tokens =
-          separator.split(getRecordReader().getCurrentValue().toString());
-      List<Edge<LongWritable, DoubleWritable>> edges =
+      String[] tokens = neighborSeparator.split(getRecordReader()
+          .getCurrentValue().toString());
+      List<Edge<LongWritable, FloatWritable>> edges =
           Lists.newArrayListWithCapacity(tokens.length - 1);
-      float weight = 1.0f / (tokens.length - 1);
+
       for (int n = 1; n < tokens.length; n++) {
+        String[] parts = weightSeparator.split(tokens[n]);
         edges.add(EdgeFactory.create(
-            new LongWritable(Long.parseLong(tokens[n])),
-            new DoubleWritable(weight)));
+            new LongWritable(Long.parseLong(parts[0])),
+            new FloatWritable(Float.parseFloat(parts[1]))));
       }
 
       LongWritable vertexId = new LongWritable(Long.parseLong(tokens[0]));
